--- a/examples/09_get_glade_variables/.vr_settings.yaml
+++ b/examples/09_get_glade_variables/.vr_settings.yaml
@@ -7,10 +7,13 @@ notebook_panel_position: 708
 run_command_line: get_glade_variables.rb
 open_files:
 - "/home/eric/vrp/vr3/examples/09_get_glade_variables/README.txt"
+- "/home/eric/vrp/vr3/examples/09_get_glade_variables/src/DataObjectGUI.rb"
 open_folders:
 - "/home/eric/vrp/vr3/examples/09_get_glade_variables"
-current_file: "/home/eric/vrp/vr3/examples/09_get_glade_variables/README.txt"
-current_line: 73
+- "/home/eric/vrp/vr3/examples/09_get_glade_variables/src"
+- "/home/eric/vrp/vr3/examples/09_get_glade_variables/src/glade"
+current_file: "/home/eric/vrp/vr3/examples/09_get_glade_variables/src/DataObjectGUI.rb"
+current_line: 44
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
