--- a/examples/20_calculator/.vr_settings.yaml
+++ b/examples/20_calculator/.vr_settings.yaml
@@ -6,11 +6,15 @@ panel_pos: 365
 notebook_panel_position: 400
 run_command_line: calculator.rb
 open_files:
-- "/home/eric/vrp/vr3/examples/09_get_glade_variables/Untitled"
+- "/home/eric/vrp/vr3/examples/20_calculator/calculator.rb"
+- "/home/eric/vrp/vr3/examples/20_calculator/src/CalculatorGUI.rb"
+- "/home/eric/vrp/vr3/examples/20_calculator/README.txt"
 open_folders:
 - "/home/eric/vrp/vr3/examples/20_calculator"
-current_file: "/home/eric/vrp/vr3/examples/09_get_glade_variables/Untitled"
-current_line: 1
+- "/home/eric/vrp/vr3/examples/20_calculator/src"
+- "/home/eric/vrp/vr3/examples/20_calculator/src/glade"
+current_file: "/home/eric/vrp/vr3/examples/20_calculator/README.txt"
+current_line: 18
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
