--- a/examples/49_settings_file/.vr_settings.yaml
+++ b/examples/49_settings_file/.vr_settings.yaml
@@ -1,18 +1,17 @@
 --- !ruby/object:VR_ENV
-vr_yaml_file: "/home/eric/vrp/vr3/examples/settings_file/.vr_settings.yaml"
-width: 1301
-height: 744
+vr_yaml_file: "/home/eric/vrp/vr3/examples/49_settings_file/.vr_settings.yaml"
+width: 1854
+height: 1003
 panel_pos: 360
 notebook_panel_position: 400
-run_command_line: ruby main.rb
+run_command_line: save_settings.rb
 open_files:
-- "/home/eric/vrp/vr3/examples/settings_file/main.rb"
-- "/home/eric/vrp/vr3/examples/settings_file/bin/MainApp.rb"
-- "/home/eric/vrp/vr3/examples/settings_file/bin/SavableSettings.rb"
+- "/home/eric/vrp/vr3/examples/49_settings_file/save_settings.rb"
+- "/home/eric/vrp/vr3/examples/49_settings_file/bin/MainApp.rb"
+- "/home/eric/vrp/vr3/examples/49_settings_file/bin/SavableSettings.rb"
 open_folders:
-- "/home/eric/vrp/vr3/examples/settings_file"
-- "/home/eric/vrp/vr3/examples/settings_file/bin"
-- "/home/eric/vrp/vr3/examples/settings_file/bin/glade"
-current_file: "/home/eric/vrp/vr3/examples/settings_file/bin/MainApp.rb"
-current_line: 26
+- "/home/eric/vrp/vr3/examples/49_settings_file"
+- "/home/eric/vrp/vr3/examples/49_settings_file/bin"
+current_file: "/home/eric/vrp/vr3/examples/49_settings_file/bin/SavableSettings.rb"
+current_line: 39
 rdoc_command_line: rdoc -x README
