Added Standalone EXE example

--- a/examples/49_settings_file/.vr_settings.yaml
+++ b/examples/49_settings_file/.vr_settings.yaml
@@ -8,10 +8,11 @@ run_command_line: save_settings.rb
 open_files:
 - "/home/eric/vrp/vr3/examples/49_settings_file/save_settings.rb"
 - "/home/eric/vrp/vr3/examples/49_settings_file/src/SavableSettings.rb"
+- "/home/eric/vrp/vr3/examples/49_settings_file/settings.yaml"
+- "/home/eric/vrp/vr3/examples/49_settings_file/README.txt"
 open_folders:
 - "/home/eric/vrp/vr3/examples/49_settings_file"
 - "/home/eric/vrp/vr3/examples/49_settings_file/src"
-- "/home/eric/vrp/vr3/examples/49_settings_file/src/glade"
-current_file: "/home/eric/vrp/vr3/examples/49_settings_file/src/SavableSettings.rb"
-current_line: 23
+current_file: "/home/eric/vrp/vr3/examples/49_settings_file/README.txt"
+current_line: 27
 rdoc_command_line: rdoc -x README
