--- a/examples/49_settings_file/settings.yaml
+++ b/examples/49_settings_file/settings.yaml
@@ -1,15 +1,14 @@
 --- !ruby/object:SavableSettings
-height: 646
-width: 1011
-username: Me Myself and I  dfgdfgs
+height: 500
+width: 600
+username: Me Myself and I
 switch: false
 checkYesNo: false
-comboFruit: Bananas
+comboFruit: Apples
+adjustment2: 58.0
 text: |-
-  Try changing this form, then running it again.  You will find that it preserves its state after it closes. You can even resize the window, and it will preserve its size. dsbgsdfg
+  Try changing this form, then running it again.  You will find that it preserves its state after it closes. You can even resize the window, and it will preserve its size.
 
   It's storing itself in settings.yaml.  To start again, just delete the settings.yaml file.You may need to click the 'Refresh' to see the settings.yaml file appear again.
 vr_yaml_file: "/home/eric/vrp/vr3/examples/49_settings_file/settings.yaml"
 builder: !ruby/object:Gtk::Builder {}
-top_level_window: true
-adjustment2: 6.1
