--- a/examples/71_prettify_view/.vr_settings.yaml
+++ b/examples/71_prettify_view/.vr_settings.yaml
@@ -4,7 +4,7 @@ width: 1854
 height: 1003
 panel_pos: 354
 notebook_panel_position: 553
-run_command_line: ruby prettify_view.rb
+run_command_line: prettify_view.rb
 open_files:
 - "/home/eric/vrp/vr3/examples/71_prettify_view/prettify_view.rb"
 - "/home/eric/vrp/vr3/examples/71_prettify_view/src/PrettyView.rb"
@@ -13,7 +13,7 @@ open_folders:
 - "/home/eric/vrp/vr3/examples/71_prettify_view/src"
 - "/home/eric/vrp/vr3/examples/71_prettify_view/src/glade"
 current_file: "/home/eric/vrp/vr3/examples/71_prettify_view/src/PrettyView.rb"
-current_line: 17
+current_line: 13
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
