--- a/examples/01_phantom/.vr_settings.yaml
+++ b/examples/01_phantom/.vr_settings.yaml
@@ -6,6 +6,7 @@ panel_pos: 360
 notebook_panel_position: 742
 run_command_line: phantom.rb
 open_files:
+- "/home/eric/vrp/vr3/src/main/NewProjectGUI.rb"
 - "/home/eric/vrp/vr3/examples/01_phantom/README.txt"
 - "/home/eric/vrp/vr3/examples/01_phantom/phantom.rb"
 - "/home/eric/vrp/vr3/examples/01_phantom/src/Phantom.rb"
