--- a/examples/92_standalone_exe/.vr_settings.yaml
+++ b/examples/92_standalone_exe/.vr_settings.yaml
@@ -9,8 +9,7 @@ open_files:
 - "/home/eric/vrp/vr3/examples/92_standalone_exe/README.txt"
 - "/home/eric/vrp/vr3/examples/92_standalone_exe/my_program"
 - "/home/eric/vrp/vr3/examples/92_standalone_exe/src/MyClass.rb"
-- "/home/eric/vrp/vr3/examples/92_standalone_exe/92_standalone_exe.gemspec"
 open_folders:
 - "/home/eric/vrp/vr3/examples/92_standalone_exe"
-current_file: "/home/eric/vrp/vr3/examples/92_standalone_exe/92_standalone_exe.gemspec"
-current_line: 16
+current_file: "/home/eric/vrp/vr3/examples/92_standalone_exe/README.txt"
+current_line: 39
