--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -12,7 +12,12 @@ open_files:
 - "/home/eric/vrp/vr3/src/editor/VR_Document.rb"
 - "/home/eric/vrp/vr3/src/main/VR_Tools.rb"
 - "/home/eric/vrp/vr3/src/main/OpenProject.rb"
+- "/home/eric/vrp/vr3/src/version.rb"
+- "/home/eric/vrp/vr3/lib/Alert.rb"
+- "/home/eric/vrp/vr3/lib/vrlib.rb"
+- "/home/eric/vrp/vr3/lib/AlertDialog.rb"
 - "/home/eric/vrp/vr3/src/main/NewProjectGUI.rb"
+- "/home/eric/vrp/vr3/src/editor/VR_Tabs.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/lib"
@@ -24,8 +29,8 @@ open_folders:
 - "/home/eric/vrp/vr3/src/editor"
 - "/home/eric/vrp/vr3/src/main"
 - "/home/eric/vrp/vr3/src/main/glade"
-current_file: "/home/eric/vrp/vr3/lib/GladeGUI.rb"
-current_line: 5
+current_file: "/home/eric/vrp/vr3/lib/AlertDialog.rb"
+current_line: 7
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
