--- a/examples/03_builder_variable/.vr_settings.yaml
+++ b/examples/03_builder_variable/.vr_settings.yaml
@@ -6,10 +6,10 @@ panel_pos: 360
 notebook_panel_position: 718
 run_command_line: builder.rb
 open_files:
-- "/home/eric/vrp/vr3/examples/02_hello/Untitled"
+- "/home/eric/vrp/vr3/examples/03_builder_variable/README.txt"
 open_folders:
 - "/home/eric/vrp/vr3/examples/03_builder_variable"
-current_file: "/home/eric/vrp/vr3/examples/02_hello/Untitled"
+current_file: "/home/eric/vrp/vr3/examples/03_builder_variable/README.txt"
 current_line: 1
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
