--- a/examples/70_better_views/.vr_settings.yaml
+++ b/examples/70_better_views/.vr_settings.yaml
@@ -4,7 +4,7 @@ width: 1854
 height: 1003
 panel_pos: 360
 notebook_panel_position: 718
-run_command_line: ruby better_views.rb
+run_command_line: better_views.rb
 open_files:
 - "/home/eric/vrp/vr3/examples/70_better_views/README.txt"
 - "/home/eric/vrp/vr3/examples/70_better_views/better_views.rb"
@@ -16,7 +16,8 @@ open_folders:
 current_file: "/home/eric/vrp/vr3/examples/70_better_views/src/BetterView.rb"
 current_line: 9
 rdoc_command_line: rdoc -x README
-builder: !ruby/object:Gtk::Builder {}
+builder: !ruby/object:Gtk::Builder
+  top_level_window: false
 top_level_window: false
 browser: firefox
 backup_path: "/home/eric"
