--- a/examples/01_phantom/.vr_settings.yaml
+++ b/examples/01_phantom/.vr_settings.yaml
@@ -3,18 +3,18 @@ vr_yaml_file: "/home/eric/vrp/vr3/examples/01_phantom/.vr_settings.yaml"
 width: 1854
 height: 1003
 panel_pos: 360
-notebook_panel_position: 742
+notebook_panel_position: 630
 run_command_line: phantom.rb
 open_files:
-- "/home/eric/vrp/vr3/src/main/NewProjectGUI.rb"
 - "/home/eric/vrp/vr3/examples/01_phantom/README.txt"
 - "/home/eric/vrp/vr3/examples/01_phantom/phantom.rb"
 - "/home/eric/vrp/vr3/examples/01_phantom/src/Phantom.rb"
+- "/home/eric/vrp/vr3/examples/01_phantom/src/glade/Phantom.glade"
 open_folders:
 - "/home/eric/vrp/vr3/examples/01_phantom"
 - "/home/eric/vrp/vr3/examples/01_phantom/src"
 - "/home/eric/vrp/vr3/examples/01_phantom/src/glade"
-current_file: "/home/eric/vrp/vr3/examples/01_phantom/src/Phantom.rb"
+current_file: "/home/eric/vrp/vr3/examples/01_phantom/src/glade/Phantom.glade"
 current_line: 8
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
