--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -2,50 +2,21 @@
 vr_yaml_file: "/home/eric/vrp/vr3/.vr_settings.yaml"
 width: 1854
 height: 1003
-panel_pos: 353
-notebook_panel_position: 622
+panel_pos: 390
+notebook_panel_position: 553
 run_command_line: vr
 open_files:
 - "/home/eric/vrp/vr3/lib/GladeGUI.rb"
 - "/home/eric/vrp/vr3/src/main/VR_Main.rb"
-- "/home/eric/vrp/vr3/vr"
-- "/home/eric/vrp/vr3/src/editor/VR_Document.rb"
-- "/home/eric/vrp/vr3/src/main/VR_Tools.rb"
-- "/home/eric/vrp/vr3/src/main/OpenProject.rb"
-- "/home/eric/vrp/vr3/src/version.rb"
-- "/home/eric/vrp/vr3/lib/Alert.rb"
-- "/home/eric/vrp/vr3/lib/vrlib.rb"
-- "/home/eric/vrp/vr3/lib/AlertDialog.rb"
-- "/home/eric/vrp/vr3/src/main/NewProjectGUI.rb"
 - "/home/eric/vrp/vr3/src/editor/VR_Tabs.rb"
-- "/home/eric/vrp/vr3/examples/06_alert_box/alertdemo.rb"
-- "/home/eric/vrp/vr3/examples/35_child_window/child_window.rb"
-- "/home/eric/vrp/vr3/examples/71_prettify_view/prettify_view.rb"
-- "/home/eric/vrp/vr3/examples/72_object_views/object_views.rb"
-- "/home/eric/vrp/vr3/examples/78_listview/listview.rb"
-- "/home/eric/vrp/vr3/examples/78_listview_objects/listviewobjects.rb"
-- "/home/eric/vrp/vr3/examples/95_active_record/active_record.rb"
-- "/home/eric/vrp/vr3/examples/97_active_record2/main.rb"
-- "/home/eric/vrp/vr3/vr.gemspec"
-- "/home/eric/vrp/vr3/examples/78_listview_objects/src/ListViewObjects.rb"
-- "/home/eric/vrp/vr3/lib/treeview/columns/CalendarCol.rb"
-- "/home/eric/vrp/vr3/site/Cheat_Sheet.md"
-- "/home/eric/vrp/vr3/site/Child_Windows_Tutorial.md"
-- "/home/eric/vrp/vr3/README.md"
+- "/home/eric/vrp/vr3/src/main/VR_File_Tree.rb"
+- "/home/eric/vrp/vr3/examples/78_listview/src/SongListViewGUI.rb"
+- "/home/eric/vrp/vr3/lib/treeview/FileTreeView.rb"
+- "/home/eric/vrp/vr3/Led_bar_8_segment.py"
 open_folders:
 - "/home/eric/vrp/vr3"
-- "/home/eric/vrp/vr3/examples"
-- "/home/eric/vrp/vr3/lib"
-- "/home/eric/vrp/vr3/lib/glade"
-- "/home/eric/vrp/vr3/site"
-- "/home/eric/vrp/vr3/skeleton"
-- "/home/eric/vrp/vr3/skeleton/document"
-- "/home/eric/vrp/vr3/src"
-- "/home/eric/vrp/vr3/src/editor"
-- "/home/eric/vrp/vr3/src/main"
-- "/home/eric/vrp/vr3/src/main/glade"
-current_file: "/home/eric/vrp/vr3/README.md"
-current_line: 34
+current_file: "/home/eric/vrp/vr3/Led_bar_8_segment.py"
+current_line: 77
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
